# docs/openapi.json
@@ -667,6 +667,55 @@
         ]
       }
     },
+    "/api/v1/agents/{id}/process-metrics": {
+      "post": {
+        "tags": [
+          "agents"
+        ],
+        "operationId": "postApiV1AgentsIdProcessMetrics",
+        "summary": "POST /api/v1/agents/{id}/process-metrics",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "2XX": {
+            "description": "Successful response"
+          },
+          "default": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            },
+            "description": "Error response"
+          }
+        },
+        "security": [
+          {
+            "agentBearer": []
+          }
+        ]
+      }
+    },
     "/api/v1/agents/{id}/terminal/claim": {
       "post": {
         "tags": [
